<resources>
    <string name="app_name">Ozinshe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otkizu">Өткізу</string>
    <string name="ozhinshe">ÖZINŞE-ге қош келдің</string>
    <string name="onboardtext">Фильмдер, телехикаялар, ситкомдар, анимациялық жобалар, телебағдарламалар мен реалити-шоулар, аниме және тағы басқалары</string>
    <string name="ari_qarai">Әрі қарай</string>
    <string name="salem">Сәлем</string>
    <string name="under_salem">Аккаунтқа кіріңіз</string>
    <string name="your_email">Сіздің email</string>
    <string name="qupiya_soz">Құпия сөз</string>
    <string name="your_password">Сіздің құпия сөзіңіз</string>
    <string name="quipiya_soz2">Құпия сөзді қайталаңыз</string>
    <string name="registration">Тіркелу</string>
    <string name="have_an_account">Сізде аккаун бар ма?</string>
    <string name="login">Кіру</string>
    <string name="under_registration">Деректерді толтырыңыз</string>
    <string name="dont_have_an_account">Аккаунтыңыз жоқ па?</string>
    <string name="forgot_password">Құпия сөзді ұмыттыңыз ба?</string>
    <string name="Or">Немесе</string>
    <string name="error_msg">Email немесе құпия сөз дурыс емес</string>
    <string name="telehikaya">Телехикая</string>
    <string name="continue_watching">Қарауды жалғастырыңыз</string>
    <string name="in_trend">Трендтегілер</string>
    <string name="all">Барлығы</string>
    <string name="for_you">Сізге арналған фильмдер</string>
    <string name="chose_genre">Жанрды таңдаңыз</string>
    <string name="new_zhoba">Жаңа жобалар</string>
    <string name="by_age">Жасына сәйкес</string>
    <string name="derekti">Деректі фильм</string>
    <string name="shetel">Шетел фильмдері</string>
    <string name="tizimge_qosu">Тізімге қосу</string>
    <string name="bolisu">Бөлісу</string>
    <string name="your_long_text">Your long text goes here.alsdfjlaskdfj;laskjdf;lkajsdf;ljasdl;fkjasl;dfjaslkdfljasdfkhlaskasdfjaslfhaksdhsdhshsdfhalskjdflaksjfdlkajslfdjalsjdflasjklaslkdjalskjflaskjflaskjflkasjfdlkjasldfjalskjflaksjdflkasaahhalksjdflkajsflkjalsofialwejih dflajslfawoeifjosdfjlasjoehflisj ofi slejf ise flsijefli sehdf</string>
    <string name="tolugraq">Толығырақ</string>
    <string name="regiser">Режиссер:</string>
    <string name="produser">Продюсер:</string>
    <string name="bolimder">Бөлімдер</string>
    <string name="screenshots">Скриншоттар</string>
    <string name="uqsas">Ұқсас телехикаялар</string>
    <string name="season">сезон</string>
    <string name="shi_bolim">- ші бөлім</string>
    <string name="izdeu">Іздеу</string>
    <string name="sanattar">Санаттар</string>
    <string name="seatcom">Ситком</string>
    <string name="korkem">Көркем фильм</string>
    <string name="multfilm">Мультфильм</string>
    <string name="multserial">Мультсериал</string>
    <string name="anime">Аниме</string>
    <string name="tv_and_show">Тв-бағдарлама және реалити-шоу</string>
    <string name="music">Музыка</string>
    <string name="qarau">Қарау</string>
    <string name="izdeu_natizhe">Іздеу нәтижелері</string>
    <string name="tizim">Тізім</string>
    <string name="my_profile">Менің профилім</string>
    <string name="ondeu">Өңдеу</string>
    <string name="zheke_derekter">Жеке деректер</string>
    <string name="change_password">Құпия сөзді өзгерту</string>
    <string name="qazaqsha">Қазақша</string>
    <string name="til">Тіл</string>
    <string name="erezhe_shartar">Ережелер мен шарттар</string>
    <string name="qarangy_rezhim">Қараңғы режим</string>
    <string name="habarlandyrular">Хабарландырулар</string>
    <string name="your_name">Сіздің атыңыз</string>
    <string name="birth_date">Тұылған күні</string>
    <string name="mobile_phone">Телефон</string>
    <string name="save_changes">Өзгерістерді сақтау</string>
    <string name="really_exit_account">Сіз шынымен аккаунтыңыздан</string>
    <string name="no">жоқ</string>
    <string name="yes_exit">Иә, шығу</string>
    <string name="profile">Профиль</string>
    <string name="password_is_invalid">Password is invalid</string>
</resources>