<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background"
    android:orientation="vertical"
    tools:context=".presentation.basic.SearchFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/otkizu"
        android:padding="0dp"
        android:src="@drawable/back2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/cvMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/izdeu"
        style="@style/Head"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="24dp"
        style="@style/InputBolim" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchBtn_text"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="-40dp"
        style="@style/CustomTextInputLayout2">
        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/izdeu"
            style="@style/Head"
            android:textColorHint="@color/undersalem" />
    </com.google.android.material.textfield.TextInputLayout>
    <ImageButton
        android:id="@+id/search_Btn_icon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginStart="134dp"
        android:layout_marginTop="-58dp"
        android:background="@drawable/input_background"
        android:backgroundTint="?attr/colorOnPrimaryFixedVariant"
        android:contentDescription="@string/in_trend"
        android:src="@drawable/group" />

    <TextView
        android:id="@+id/sanat_izdeu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sanattar"
        style="@style/Head"
        android:textSize="24sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/telehikaya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_strings"
            style="@style/Sanattar"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:text="@string/telehikaya"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/seatcom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/telehikaya"
            android:background="@drawable/search_strings"
            style="@style/Sanattar"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:text="@string/seatcom"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/korkem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/seatcom"
            android:background="@drawable/search_strings"
            style="@style/Sanattar"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:text="@string/korkem"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/multfilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seatcom"
            android:layout_marginTop="8dp"
            android:background="@drawable/search_strings"
            style="@style/Sanattar"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:text="@string/multfilm"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/multserial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seatcom"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/multfilm"
            android:background="@drawable/search_strings"
            style="@style/Sanattar"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:text="@string/multserial"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/korkem"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/multserial"
            android:background="@drawable/search_strings"
            style="@style/Sanattar"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:text="@string/anime"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tv_and_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/multserial"
            android:background="@drawable/search_strings"
            style="@style/Sanattar"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:text="@string/tv_and_show"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/derekti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_and_show"
            android:layout_marginTop="8dp"
            android:background="@drawable/search_strings"
            style="@style/Sanattar"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:text="@string/derekti"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_and_show"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/derekti"
            android:background="@drawable/search_strings"
            style="@style/Sanattar"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:text="@string/music"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/shetel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/derekti"
            android:layout_marginTop="8dp"
            android:background="@drawable/search_strings"
            style="@style/Sanattar"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:text="@string/shetel"
            android:textSize="14sp" />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcView"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>