<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bottom_sheet"
    android:orientation="vertical">

    <View
        android:layout_width="65dp"
        android:layout_height="5dp"
        android:background="@drawable/view_corner_rounded"
        android:layout_marginTop="21dp"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/til"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/really_exit_account"
        android:textColor="@color/undersalem"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"/>

    <Button
        android:id="@+id/yes"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/button"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:text="@string/yes_exit"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        android:layout_gravity="bottom"/>
    <Button
        android:id="@+id/no"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/input"
        android:fontFamily="sans-serif-medium"
        android:text="@string/no"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        android:textColor="@color/login"
        android:layout_gravity="bottom"
        android:layout_marginBottom="32dp"/>
</LinearLayout>