<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".profile.ZhekeDerekterFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/otkizu"
        android:src="@drawable/back2"
        android:background="@android:color/transparent"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/cvMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/zheke_derekter"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="120dp"
        android:background="@color/input"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/undersalem"
        android:text="@string/your_name"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="160dp"
        android:inputType="textPersonName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/undersalem"
        android:text="Email"
        android:layout_marginStart="24dp"
        android:layout_marginTop="220dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="240dp"
        android:inputType="textEmailAddress"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/undersalem"
        android:text="@string/mobile_phone"
        android:layout_marginStart="24dp"
        android:layout_marginTop="300dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="320dp"
        android:inputType="phone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/undersalem"
        android:text="@string/birth_date"
        android:layout_marginStart="24dp"
        android:layout_marginTop="380dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="400dp"
        android:inputType="date"/>
    <Button
        android:id="@+id/btnAuthorization"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/save_changes"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"/>
</FrameLayout>