<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".profile.QupiyaFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/otkizu"
        android:src="@drawable/back2"
        android:background="@android:color/transparent"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/cvMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="120dp"
        android:background="@color/input"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/qupiya_soz"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:textSize="16sp"
        android:layout_marginHorizontal="24dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/show">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditInput1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:drawableEnd="@drawable/show"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/your_password"
            android:textColor="@color/white"
            android:textColorHint="@color/undersalem"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/quipiya_soz2"
        android:layout_marginStart="24dp"
        android:layout_marginTop="250dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:textSize="16sp"
        android:layout_marginHorizontal="24dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/show">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:drawableEnd="@drawable/show"
            android:drawablePadding="8dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/your_password"
            android:textColor="@color/white"
            android:textColorHint="@color/undersalem"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="370dp"
        android:textSize="16sp"
        android:textColor="@color/error"
        android:text="Password is invalid"
        android:visibility="gone"/>
    <Button
        android:id="@+id/savePassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/save_changes"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"/>
</FrameLayout>